infrastructure/demo/admin-ingressgateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-admin-gateway
