infrastructure/demo/tenant-ingressgateway.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-tenant-gateway
