infrastructure/demo/admin-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-admin-gateway
  namespace: istio-admin-gateway
spec:
  selector:
    istio: admin-gateway
  servers:
    - hosts:
        - "*.admin.dev.techbrewhq.com"
      port:
        name: http-admin
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - "*.admin.dev.techbrewhq.com"
      port:
        name: https-admin
        number: 443
        protocol: HTTPS
      tls:
        credentialName: gateway-tls
        minProtocolVersion: TLSV1_3
        mode: SIMPLE
    - hosts:
        - keycloak.admin.dev.techbrewhq.com
      port:
        name: http-keycloak
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
    - hosts:
        - keycloak.admin.dev.techbrewhq.com
      port:
        name: https-keycloak
        number: 443
        protocol: HTTPS
      tls:
        credentialName: gateway-tls
        minProtocolVersion: TLSV1_3
        mode: OPTIONAL_MUTUAL
