infrastructure/demo/tenant-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-tenant-gateway
  namespace: istio-tenant-gateway
spec:
  selector:
    app: istio-tenant-gateway
    istio: istio-tenant-gateway # Must match the gateway pod labels
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*.dev.techbrewhq.com"
      tls:
        mode: SIMPLE
        credentialName: gateway-tls
